Restored inadvertedly removed mapping for users/company assignment

--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -101,6 +101,11 @@ base:
         res_users.date:
     res_users.address_id: __forget__
 
+    res_company_users_rel.*:
+    res_company_users_rel.__discriminator__:
+        - cid
+        - user_id
+
     # Partners
     res_partner.*:
     res_partner.name:
