[FIX] migration of hr_employee addresses
fixes https://bitbucket.org/anybox/anybox.migration.openerp/issue/7/hr_employeeaddress_home_id-mismatched

--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -821,6 +821,10 @@ hr:
     hr_employee.manager: __forget__
     hr_employee.photo:
         hr_employee.image:
+    hr_employee.address_id:
+        hr_employee.address_id: __fk__ res_partner_address
+    hr_employee.address_home_id:
+        hr_employee.address_home_id: __fk__ res_partner_address
     hr_department.*:
 
 hr_recruitment:
