correctly merge periods

--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -349,6 +349,8 @@ account:
         - code
         - company_id
     account_period.*:
+    account_period.company_id:
+        account_period.company_id: __fk__ res_company  # (related with store)
     account_period.__discriminator__:
         - name
         - company_id
