--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -334,6 +334,7 @@ fetchmail:
     mail_alias.__discriminator__:
         - alias_name
 
+
 account:
     account_account.*:
     account_account.__discriminator__:
@@ -344,6 +345,8 @@ account:
         - code
         - company_id
     account_period.*:
+    account_period.company_id:
+        account_period.company_id: __fk__ res_company  # (related with store)
     account_period.__discriminator__:
         - name
         - company_id
@@ -372,12 +375,14 @@ account:
         - tax_dest_id
         - tax_src_id
     account_bank_statement.*:
+    account_bank_statement_line.*:
+    account_bank_statement_line.company_id:
+        account_bank_statement_line.company_id: __fk__ res_company  # (related with store)
+    account_bank_statement_line_move_rel.*:
     account_bank_statement.company_id:
         account_bank_statement.company_id: __fk__ res_company  # (related with store)
     account_bank_statement.balance_end_cash: __forget__
     account_bank_statement.shop_id: __forget__  # create pos_sessions?
-    account_bank_statement_line.*:
-    account_bank_statement_line_move_rel.*:
 
     account_chart_template.*:
     account_chart_template.property_reserve_and_surplus_account: __forget__
@@ -385,8 +390,12 @@ account:
     account_invoice.*:
     account_invoice.address_contact_id: __forget__
     account_invoice.address_invoice_id: __forget__
+    account_invoice.company_id:
+        account_invoice.company_id: __fk__ res_company  # (related with store)
 
     account_invoice_line.*:
+    account_invoice_line.company_id:
+        account_invoice_line.company_id: __fk__ res_company  # (related with store)
     account_invoice_line_tax.*:
     account_invoice_line.name:
         account_invoice_line.name:
@@ -458,8 +467,11 @@ account:
     account_payment_term.__discriminator__:
         - name
     account_journal_period.*:
+    account_journal_period.company_id:
+        account_journal_period.company_id: __fk__ res_company  # (related with store)
     account_journal_period.__discriminator__:
         - name
+        - company_id
     account_account_tax_default_rel.*:
     account_account_tax_default_rel.__discriminator__:
         - account_id
@@ -472,17 +484,15 @@ account:
     product_supplier_taxes_rel.__discriminator__:
         - prod_id
         - tax_id
-
     account_account_consol_rel.*:
-
-
-account_accountant:
-    account_accountant.*:
 
 
 account_analytic_analysis:
     account_analytic_analysis.*:
     account_analytic_account.*:
+    account_analytic_account._:
+        account_analytic_account.charge_expenses:
+        account_analytic_account.est_expenses:
     account_analytic_account.type:
         account_analytic_account.type: |
             type = source_row['type']
@@ -494,25 +504,9 @@ account_analytic_analysis:
                 if r:
                     return 'contract'
             return type
-    account_analytic_account._:
-        account_analytic_account.charge_expenses:
-        account_analytic_account.est_expenses:
     account_analytic_account.contact_id: __forget__
     account_analytic_account.id:
         account_analytic_account.id:
-    account_analytic_line.*:
-
-
-account_analytic_default:
-    account_analytic_default.*:
-
-
-account_analytic_plans:
-    account_analytic_plans.*:
-
-
-account_anglo_saxon:
-    account_anglo_saxon.*:
 
 
 account_report_company:
@@ -573,38 +567,26 @@ project:
     project_project.scrum: __forget__
     project_project.sprint_size: __forget__
 
+
 project_mrp:
     procurement_order.task_id:
         procurement_order.task_id: __defer__
         procurement_order.sale_line_id: __defer__
 
+
 account_asset:
-    account_asset.*:
+    account_asset_category.*:
+    account_asset_asset.*:
     account_asset_depreciation_line.*:
+    account_asset_history.*:
     account_asset_depreciation_line.depreciation_date:
         account_asset_depreciation_line.depreciation_date: #change type char to date
 
 
-account_bank_statement_extensions:
-    account_bank_statement_extensions.*:
-    account_bank_statement_line.journal_id:
-        account.account_bank_statement_extensions:
-
-
 account_budget:
-    account_budget.*:
-
-
-account_cancel:
-    account_cancel.*:
-
-
-account_chart:
-    account_chart.*:
-
-
-account_check_writing:
-    account_check_writing.*:
+    account_budget_post.*:
+    crossovered_budget.*:
+    crossovered_budget_lines.*:
 
 
 account_followup:
@@ -614,18 +596,14 @@ account_followup:
 
 
 account_payment:
+    payment_mode.*:
     payment_order.*:
     payment_line.*:
-    payment_mode.*:
 
 
 account_sequence:
     account_sequence.*:
     account_sequence_fiscalyear.*:
-
-
-account_test:
-    account_test.*:
 
 
 account_voucher:
@@ -636,19 +614,18 @@ account_voucher:
 
 
 analytic:
-    analytic.*:
-
-
-analytic_contract_hr_expense:
-    analytic_contract_hr_expense.*:
-
+    account_analytic_account.*:
+    account_analytic_account.contact_id: __forget__
+    account_analytic_account._:
+        account_analytic_account.manager_id: return False
+    account_analytic_line.*:
 
 
 analytic_user_function:
-    analytic_user_function.*:
     analytic_user_funct_grid.id:
         analytic_user_funct_grid.id:
-        analytic_user_funct_grid.price:
+        analytic_user_funct_grid.price: return 0.0
+
 
 crm:
     crm_case.*:
@@ -698,6 +675,7 @@ crm:
         mail_message.*:
     crm_add_note.state: __forget__
 
+
 sale:
     sale_order.*:
     sale_order.company_id:
@@ -716,10 +694,12 @@ sale:
     sale_order_line_invoice_rel.*:
     sale_order_invoice_rel.*:
 
+
 sale_crm:
     sale_order.categ_id: # m2o turned into a m2m
         sale_order_category_rel.category_id: return source_row['categ_id']
         sale_order_category_rel.order_id: return source_row['id']
+
 
 stock:
     stock_move.*:
@@ -752,6 +732,7 @@ stock:
     stock_journal.*:
     stock_journal.__discriminator__:
         - name
+
 
 point_of_sale:
     pos_order.*:
@@ -818,6 +799,7 @@ purchase:
     purchase_order.partner_address_id: __forget__
     purchase_order_line.*:
     purchase_order_line.notes: __forget__
+
 
 hr:
     hr_expense_expense.*:
